{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 20,
  "lineage": "7a39f7ac-2f31-80b7-7f21-c3c839f05998",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_server_nic",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-00-nic",
            "internal_domain_name_suffix": "ecsrlhjhnwte1exnxy1vsyrxub.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-server-00-ip",
                "primary": true,
                "private_ip_address": "1.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-00-public",
                "subnet_id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server"
              }
            ],
            "location": "westus2",
            "name": "web-00-nic",
            "private_ip_address": "1.0.1.4",
            "private_ip_addresses": [
              "1.0.1.4"
            ],
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_ip",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/networkInterfaces/web-01-nic",
            "internal_domain_name_suffix": "ecsrlhjhnwte1exnxy1vsyrxub.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-server-01-ip",
                "primary": true,
                "private_ip_address": "1.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-01-public",
                "subnet_id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server"
              }
            ],
            "location": "westus2",
            "name": "web-01-nic",
            "private_ip_address": "1.0.1.5",
            "private_ip_addresses": [
              "1.0.1.5"
            ],
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_ip",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_sg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "location": "westus2",
            "name": "web-server-nsg",
            "resource_group_name": "web-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_rdp",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "web-server-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_sg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_ip",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-00-public",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-00-public",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-01-public",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "web-server-01-public",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "each": "map",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": "AzureBastionsSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.2.0/24",
            "address_prefixes": [
              "1.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/AzureBastionsSubnet",
            "name": "AzureBastionsSubnet",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": "web-server",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "address_prefixes": [
              "1.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server",
            "name": "web-server",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_server_sag",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server",
            "network_security_group_id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "subnet_id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server"
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_sg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "guid": "9d15a520-6d27-4da6-92ed-be37596237a1",
            "id": "/subscriptions/c52e357a-e949-41a0-997d-10208fc4f38d/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet",
            "location": "westus2",
            "name": "web-server-vnet",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}